Massive refactor and update to the codebase

--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,18 @@ repositories {
         url = "https://repo.papermc.io/repository/maven-public/"
     }
     maven {
-        name = "dmulloy2-repo"
-        url = "https://repo.dmulloy2.net/repository/public/"
+        name = "codemc-releases"
+        url = "https://repo.codemc.io/repository/maven-releases/"
+    }
+    maven {
+        name = "codemc-snapshots"
+        url = "https://repo.codemc.io/repository/maven-snapshots/"
     }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT")
-    compileOnly("com.comphenix.protocol:ProtocolLib:5.4.0-SNAPSHOT")
+    compileOnly("com.github.retrooper:packetevents-spigot:2.11.1")
 }
 
 tasks {
