--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,6 @@ enabled: true
 hide-below-y: 0
 proximity-distance: 16
 replacement-block: AIR
+blacklisted-worlds:
+  - world_nether
+  - world_the_end
